--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
         </div>
         <div class="card-footer text-muted">
             Thông báo
-            <div class="outputUN text-center">output</div>
+            <div id="outputUN" class="text-center">
+                Output
+                <a name="" id="" class="btn btn-primary" href="#" role="button"></a>
+            </div>
         </div>
     </div>
     <div class="card">
