--- a/index.html
+++ b/index.html
@@ -1,81 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>Title</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1,
-            shrink-to-fit=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1,
+            shrink-to-fit=no"
+    />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-</head>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<body>
-    <div class="card col-md-6 text-center">
-        <div class="card-header">Đăng nhập</div>
+  <body>
+    <div class="card col-md-6">
+      <div class="card-header">Đăng Nhập</div>
+      <div class="card-body">
+        <div class="col-4">
+          UserName
+          <input
+            type="text"
+            class="form-control"
+            id="txtUserName"
+            placeholder="Enter UserName"
+            name="email"
+          />
+        </div>
+        <div class="col-4">
+          PassWord
+          <input
+            type="password"
+            class="form-control"
+            id="txtPassWord"
+            placeholder="Enter PassWord"
+            name="pswd"
+          />
+        </div>
+      </div>
+      <button id="btnLogin" type="submit" class="btn btn-primary mt-3 col-4">
+        Login
+      </button>
+      <div class="card-footer text-muted">
+        Thông báo kết quả
+        <div class="Result">
+          <div id="resultUserName"></div>
+          <div id="resultPassWord"></div>
+        </div>
+      </div>
+    </div>
+    <!-- bài 1 -->
+    <div class="card col-md-6">
+      <div class="card-header">
+        Bài 1
+        <div class="row">
+          <div class="col-2">
+            <input id="enterNumb" type="text" placeholder="Nhập số ngày làm" />
+          </div>
+        </div>
+        <p>Lương 1 ngày : 100.000</p>
+        <button id="enter" type="submit" class="btn btn-primary">Enter</button>
+      </div>
+      <div class="card-body">
+        <p>Nhập số ngày làm</p>
+        <p>Lương = Lương 1 ngày* số ngày làm</p>
+      </div>
+      <div class="card-footer text-muted">
+        Kết quả
+        <div id="Result"></div>
+      </div>
+    </div>
+    <!-- bài 2 -->
+    <div class="card col-md-6">
+        <div class="card-header">
+            Bài 2
+        </div>
         <div class="card-body">
-            <div class="form-group">
-                <form class="form-inline">
-                    <div class="form-group">
-                        <label for="">UserName</label>
-                        <input id="txtUserName" type="text" class="form-control" placeholder="UserName" />
-                    </div>
-                </form>
-            </div>
-            <div class="form-group">
-                <form class="form-inline">
-                    <div class="form-group">
-                        <label for="">PassWord</label>
-                        <input id="txtPassWord" type="password" class="form-control" placeholder="PassWord" />
-                    </div>
-                </form>
-            </div>
-            <button id="btnLogin" type="button" class="btn btn-success">
-                Login
-            </button>
+            <input id="num_1" type="text" placeholder="Nhập số thực thứ nhất">
+            <input id="num_2" type="text" placeholder="Nhập số thực thứ hai">
+            <input id="num_3" type="text" placeholder="Nhập số thực thứ ba">
+            <input id="num_4" type="text" placeholder="Nhập số thực thứ bốn">
+            <input id="num_5" type="text" placeholder="Nhập số thực thứ năm">
+            <div><button id="enterNumb" class="btn btn-primary mt-3" type="submit">Enter</button></div>
         </div>
         <div class="card-footer text-muted">
-            Thông báo
-            <div id="outputUN" class="text-center">
-                Output
-                <a name="" id="" class="btn btn-primary" href="#" role="button"></a>
-            </div>
+            Kết quả
+            <div id="resultNumb"></div>
         </div>
     </div>
-    <div class="card">
-        <div class="card-header">
-            Bài 1
-            <form>
-                <div class="row">
-                    <div class="col-2">
-                        <input id="enterNumb" type="text" placeholder="Nhập số"/>
-                    </div>
-                </div>
-                <button id="enter" type="submit" class="btn btn-primary mt-3">Submit</button>
-            </form>
-            Lương 1 ngày : 100.000
-        </div>
-        <div class="card-body"></div>
-        <div id="Result" class="card-footer text-muted">Kết quả
-
-        </div>
-    </div>
-
     <script src="./main.js"></script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
